--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .body{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: justify;
 }
 .title{
     text-align: center;
