--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 .body{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: justify;
+    
 }
 .title{
     text-align: center;
+    background-color: #005883;
 }
 
 .menu{
