--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@
     color: #005883;
 }
 
+.titledos{
+    text-align: right;
+    color: #005883;
+}
+
 .menu{
     padding: 20px;
     background-color: #F0B429;
