--- a/style.css
+++ b/style.css
@@ -26,3 +26,11 @@
     width: 80%;
     margin: 40px;
 }
+.menu2{
+    padding: 20px;
+    font-size: 11px;
+    text-decoration: none;
+    background-color: ;
+    color: FFFFFF;
+    width: 100%;
+}
