--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
     padding: 20px;
     font-size: 11px;
     text-decoration: none;
-    background-color: ;
+    background-color: #B3B3B3;
     color: FFFFFF;
     width: 100%;
 }
