--- a/style.css
+++ b/style.css
@@ -15,9 +15,8 @@
 
 .menu{
     padding: 20px;
-    font-size: 11px;
-    background-color: #005883;
-    color: FFFFFF;
+    background-color: #F0B429;
+    width: 100%;
 }
 
 .tabla{
